# bk_maya

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __init__.py  _bandit.yaml  pyproject.toml
.github/: make-tests-matrix.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: CI.yml  PR.yml  lint.yml  release.yml
bk_maya/: _version.py  dev.py  maya_plugin.py
bk_maya/api/: client.py
bk_maya/core/: auth.py  blender_runner.py  bookmarks.py  client_lib.py  client_settings.py  download.py  global_vars.py  icons.py  locator_state.py  log.py  prefs.py  search.py  secret_store.py  updates.py
bk_maya/plugins/: maya_plugin.py  placement_locator.py
bk_maya/scripts/: __init__.py  bg_download.py
bk_maya/ui/: asset_bar.py  placement.py  settings_dialog.py
client/: login.go  main.go  run_blender_script.go  wrappers.go
client/tools/: __init__.py  export_glb.py  export_usd.py
devs/: requirements.txt
tests/: __init__.py  test_global_vars.py  test_locator_state.py  test_proxor_maya_draw.py  test_prx_format_roundtrip.py  test_version_compare.py
