[project]
requires-python = ">=3.11,<3.13" # in order to support numpy<2.0.0
dependencies = [
    "requests>=2.18.4",
    "types-requests>=2.31.0.5",
]

# these will not be included in build distributions
[dependency-groups]
dev = [
    ##
    "numpy>=1.21.0,<2.0.0",

    "bandit>=1.9.4", # code is currently invalid for bandit
    "ruff>=0.15.6", # code is currently invalid for ruff
    "pydoclint>=0.8.3", # code is currently invalid for pydoclint
]

[tool.ruff]
target-version = "py310"
line-length = 120
include = ["pyproject.toml",
    "**/*.py",
    "*.py"
    ]
exclude = [
  "lib",
  "out",
  "addon_updater.py",
  "addon_updater_ops.py",
  "_debug/**",
  "_bck/**",
  "*.tmp",
  "__pycache__/**",
  ".venv/**",
  "*.pyi",
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "S1", "S2", "S3", "S5", "BLE", "FBT",
    "B", "A", "C4", "COM", "DTZ", "T10", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID",
    "TC001", "TC004", "TC005", "TC010",
    "INT", "ARG", "FIX", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"
]

ignore = [
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RET504", # https://docs.astral.sh/ruff/rules/unnecessary-assign/
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
ignore-private-args = true
ignore-underscore-args = true
exclude = "\\.venv"
